[package]
name = "rusty_os"
version = "0.1.0"
authors = ["EmeraldMasta"]
edition = "2018"

[dependencies]
# So we can boot
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
# Programming Interrupt Controller utilities
pic8259 = "0.10.1"
# For Mutex
spin = "0.5.2"
# General x86_64 utilities
x86_64 = "0.14.2"
# Keyboard stuff
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
opt-level = 3
lto = true
codegen-units = 1